# ChangeLog for net-analyzer/nagios-core
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/ChangeLog,v 1.33 2004/07/08 23:12:08 eldad Exp $

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.1-r4.ebuild:
  added missing noweb to IUSE

  05 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.1-r6.ebuild,
  nagios-core-1.2-r1.ebuild:
  x86 marked stable.

  05 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.1-r6.ebuild,
  nagios-core-1.2-r1.ebuild:
  Added missing make || die. Added include path for postgresql, closes #45614.

  04 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.1-r4.ebuild,
  nagios-core-1.1-r5.ebuild, nagios-core-1.1-r6.ebuild,
  nagios-core-1.2-r1.ebuild:
  Fix chown of /var/nagios/rw for when there is no apache group. Closes #51939.
  Thanks to katerina <kllba@operamail.com>.

  03 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.1-r4.ebuild,
  nagios-core-1.1-r5.ebuild, nagios-core-1.1-r6.ebuild,
  nagios-core-1.2-r1.ebuild, nagios-core-1.2.ebuild:
  Added a check in pkg_setup to test whether gd was compiled with jpeg. closes
  #12483.

  01 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.2-r1.ebuild:
  Prioritized mysql over postgresql, in case both USE flags are enabled. Closes
  #53439.

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> nagios-core-1.1-r4.ebuild,
  nagios-core-1.1-r5.ebuild, nagios-core-1.1-r6.ebuild,
  nagios-core-1.2-r1.ebuild, nagios-core-1.2.ebuild:
  Fix use invocation

  30 May 2004; Robin H. Johnson <robbat2@gentoo.org>
  nagios-core-1.1-r4.ebuild, nagios-core-1.1-r5.ebuild,
  nagios-core-1.1-r6.ebuild, nagios-core-1.2-r1.ebuild,
  nagios-core-1.2.ebuild:
  mailx move

*nagios-core-1.2-r1 (17 Apr 2004)

  17 Apr 2004; Michael Boman <mboman@gentoo.org> nagios-core-1.2-r1.ebuild:
  Fixed installation instructions at the end of the installation. Closes #46519.
