@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/nagios-core
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/ChangeLog,v 1.33 2004/07/08 23:12:08 eldad Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-core/ChangeLog,v 1.34 2004/07/10 10:38:38 eldad Exp $
+
+*nagios-core-1.2-r2 (10 Jul 2004)
+
+  10 Jul 2004; Eldad Zack <eldad@gentoo.org> +nagios-core-1.2-r2.ebuild:
+  Fixed external command file permissions. Closes #56490.
 
   09 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-core-1.1-r4.ebuild:
   added missing noweb to IUSE
